--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
 dev = [
   "pytest>=8.0.0",
   "pytest-cov>=4.1.0",
+  "hypothesis>=6.0.0",
   "mypy>=1.10.0",
   "ruff>=0.5.0",
   "black>=24.4.0",
