--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ build-backend = "hatchling.build"
 
 [project]
 name = "furlang2p"
-version = "0.1.0"
+version = "0.0.1"
 description = "FurlanG2P: a scalable, library-first G2P and text normalization toolkit (skeleton)."
 readme = "README.md"
 requires-python = ">=3.10"
 license = { text = "MIT" }
 authors = [
-  { name = "Your Name", email = "you@example.com" }
+  { name = "FurlanG2P Team", email = "maintainers@example.com" }
 ]
 keywords = ["g2p", "text-normalization", "tts", "nlp", "phonemization"]
 classifiers = [
@@ -35,8 +35,8 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/yourname/FurlanG2P"
-Issues = "https://github.com/yourname/FurlanG2P/issues"
+Homepage = "https://github.com/furlan-g2p/FurlanG2P"
+Issues = "https://github.com/furlan-g2p/FurlanG2P/issues"
 
 [project.scripts]
 furlang2p = "furlan_g2p.cli.app:main"
