--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "hatchling.build"
 name = "furlang2p"
 dynamic = ["version"]
 description = "FurlanG2P: a scalable, library-first G2P and text normalization toolkit (skeleton)."
-readme = "README.md"
+readme = { file = "README-pypi.md", content-type = "text/markdown" }
 requires-python = ">=3.10"
 license = { text = "MIT" }
 authors = [
