--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,35 +14,38 @@ jobs:
     runs-on: ubuntu-latest
     environment: pypi
     steps:
-      - uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
-          cache: 'pip'
-      - name: Install Hatch
-        run: |
-          python -m pip install --upgrade pip
-          pip install hatch
-      - name: Bump patch version
-        id: bump
-        run: |
-          old_version=$(hatch version)
-          hatch version patch
-          new_version=$(hatch version)
-          echo "new_version=$new_version" >> "$GITHUB_OUTPUT"
-      - name: Commit and tag
-        env:
-          NEW_VERSION: ${{ steps.bump.outputs.new_version }}
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git commit -am "chore: bump version to $NEW_VERSION"
-          git tag "v$NEW_VERSION"
-          git push --follow-tags
-      - name: Build
-        run: hatch build
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+        - uses: actions/checkout@v4
+          with:
+            token: ${{ secrets.GITHUB_TOKEN }}
+        - uses: actions/setup-python@v5
+          with:
+            python-version: '3.x'
+            cache: 'pip'
+        - name: Install Hatch
+          run: |
+            python -m pip install --upgrade pip
+            pip install hatch
+        - name: Bump patch version
+          id: bump
+          run: |
+            old_version=$(hatch version)
+            hatch version patch
+            new_version=$(hatch version)
+            echo "new_version=$new_version" >> "$GITHUB_OUTPUT"
+        - name: Commit and tag
+          env:
+            NEW_VERSION: ${{ steps.bump.outputs.new_version }}
+          run: |
+            git config user.name github-actions
+            git config user.email github-actions@github.com
+            git commit -am "chore: bump version to $NEW_VERSION"
+            git tag "v$NEW_VERSION"
+            git push --follow-tags
+        - name: Build
+          run: hatch build
+        - name: Publish to PyPI
+          uses: pypa/gh-action-pypi-publish@release/v1
+          with:
+            user: __token__
+            password: ${{ secrets.PYPI_API_TOKEN }}
 
