--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "furlang2p"
 dynamic = ["version"]
-description = "FurlanG2P: a scalable, library-first G2P and text normalization toolkit (skeleton)."
+description = "Friulian text normalization, tokenization, G2P conversion and phonology with a CLI and pipeline service."
 readme = { file = "README-pypi.md", content-type = "text/markdown" }
 requires-python = ">=3.10"
 license = { text = "MIT" }
