--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,9 +36,9 @@ jobs:
           env:
             NEW_VERSION: ${{ steps.bump.outputs.new_version }}
           run: |
-            git config user.name github-actions
+            git config user.name GitHub Actions
             git config user.email github-actions@github.com
-            git commit -am "chore: bump version to $NEW_VERSION"
+            git commit -am "chore(): bump version to '$NEW_VERSION'"
             git tag "v$NEW_VERSION"
             git push --follow-tags
         - name: Build
