--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,16 @@ name: Release
 on:
   push:
     branches: [main]
+  workflow_dispatch:
+    inputs:
+      release_type:
+        description: "Semantic version segment to increment"
+        type: choice
+        options:
+          - patch
+          - minor
+          - major
+        default: patch
 
 permissions:
   contents: write
@@ -25,11 +35,13 @@ jobs:
           run: |
             python -m pip install --upgrade pip
             pip install hatch
-        - name: Bump patch version
+        - name: Bump version
           id: bump
+          env:
+            RELEASE_TYPE: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.release_type || 'patch' }}
           run: |
             old_version=$(hatch version)
-            hatch version patch
+            hatch version "$RELEASE_TYPE"
             new_version=$(hatch version)
             echo "new_version=$new_version" >> "$GITHUB_OUTPUT"
         - name: Commit and tag
