--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
           git config user.name GitHub Actions
           git config user.email github-actions@github.com
           git commit -am "chore(): bump version to '$NEW_VERSION'"
-          git tag -a "v$NEW_VERSION" -m "Release v$NEW_VERSION"
+          git tag -a "$NEW_VERSION" -m "Release $NEW_VERSION"
           git push --follow-tags origin HEAD:main
       - name: Build
         run: hatch build
